# src/main/resources/openapi.yaml
@@ -60,6 +60,28 @@ paths:
         '204':
           description: User deleted
 
+  /users/{username}:
+    get:
+      tags: [Users]
+      summary: Get user by username
+      operationId: getUser
+      parameters:
+        - name: username
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: User found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDto'
+        '404':
+          description: User not found
+
+
   /students:
     get:
       summary: Get all students
